finishing example selector

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,3 +1,5 @@
-<button>Page 1</button>
-<button>Page 2</button>
-<button>Page 3</button>
+<button routerLink="/example">Example</button>
+<button routerLink="/html">HTML</button>
+<button routerLink="/box-model">Box Model</button>
+<button routerLink="/multi-column">Multi column layout</button>
+<button routerLink="/persistence">Persistence</button>
