add sample html

--- a/src/app/html/html.component.html
+++ b/src/app/html/html.component.html
@@ -1,3 +1,22 @@
-<p>
-  html works!
-</p>
+<div>
+  div
+</div>
+<div>
+  div
+</div>
+<div>
+  div
+</div>
+<div>
+  div
+</div>
+
+VS 
+
+<span>span</span><span>span</span><span>span</span><span>span</span>
+
+<p>Paragraph tag. Please read me</p> 
+
+<a href="https://www.reddit.com">Don't get distracted</a>
+
+<img src="../assets/test.jpg" />
