--- a/src/app/example/example.component.html
+++ b/src/app/example/example.component.html
@@ -1,3 +1,4 @@
-<p>
-  example works!
-</p>
+<div>
+  <input type="text" [(ngModel)]="searchTerm" />
+  <a href="https://www.google.com/#q={{searchTerm}}">Let me google that for you</a>
+</div>
