--- a/src/app/multi-column/multi-column.component.html
+++ b/src/app/multi-column/multi-column.component.html
@@ -1,3 +1,28 @@
-<p>
-  multi-column works!
-</p>
+<h1> Bootstrap</h1>
+<p>Bootstrap is a css/js library that allows us to easily implement a multi column layout by using a grid layout. 
+  It also allows the usage of a responsive design, which means that the page is responsive to what dimensions the window is currently displayed as</p>
+<div>
+  <div class="left col-xs-4">
+    Column 1
+  </div>
+  <div class="mid col-xs-4">
+    Column 2
+  </div>
+  <div class="right col-xs-4">
+    Column 3
+  </div>
+</div>
+
+<h2>Wrapping occurs when it gets smaller</h2>
+<div>
+  <div class="left col-sm-4">
+    Column 1
+  </div>
+  <div class="mid col-sm-4">
+    Column 2
+  </div>
+  <div class="right col-sm-4">
+    Column 3
+  </div>
+</div>
+
