--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <button routerLink="/example">Example</button>
 <button routerLink="/html">HTML</button>
 <button routerLink="/box-model">Box Model</button>
-<button routerLink="/multi-column">Multi column layout</button>
+<button routerLink="/multi-column">Bootstrap</button>
 <button routerLink="/persistence">Persistence</button>
