--- a/src/app/html/html.component.html
+++ b/src/app/html/html.component.html
@@ -17,6 +17,8 @@ VS
 
 <p>Paragraph tag. Please read me</p> 
 
-<a href="https://www.reddit.com">Don't get distracted</a>
+<a href="/example">Don't get distracted</a>
 
 <img src="../assets/test.jpg" />
+
+<marquee>Don't use this</marquee>
