added a new delete element

--- a/src/app/example/example.component.html
+++ b/src/app/example/example.component.html
@@ -1,4 +1,5 @@
 <div>
   <input type="text" [(ngModel)]="searchTerm" />
   <a href="https://www.google.com/#q={{searchTerm}}">Let me google that for you</a>
+<del> don't do this </del>
 </div>
