--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -3,3 +3,4 @@
 <button routerLink="/box-model">Box Model</button>
 <button routerLink="/multi-column">Bootstrap</button>
 <button routerLink="/persistence">Persistence</button>
+<button routerLink="/fizzbuzz">Fizzbuss</button>
